Major changes: - Adding authentication system in place (signIn, signup, sign with google) - adding intiail store page - needs to be completed - major refactor in the app structure

--- a/web/index.html
+++ b/web/index.html
@@ -30,6 +30,9 @@
   <link rel="icon" href="/favicon.ico" sizes="any">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
+  <!-- Google Sign-In Client ID -->
+  <meta name="google-signin-client_id" content="YOUR_CLIENT_ID.apps.googleusercontent.com">
+
   <title>e_store</title>
   <link rel="manifest" href="manifest.json">
 
